# data-quality

./: .gitignore  README.md  dq_checks.yaml  pyproject.toml  test_df_to_yaml.yaml
src/main/: constants.py  entry.py  main.py  welcome.py
src/main/connection_factory/: conn.py
src/main/connection_factory/conn_configs/: conn.yml
src/main/connection_factory/snowflake/: conn_snow.py
src/main/source_factory/databases/: snow.py
src/main/source_factory/file/: f_csv.py
src/main/ui/: dqc.py  file.py
src/utils/: lcs.py  test.py
